--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-
+/* Home Page */
 .nav-inner-container{
     display: flex;
     align-items: center;
@@ -44,7 +44,7 @@
 }
 
 .section-hero{
-    height: 90vh;
+    height: 1010px;
     width: 100%;
     background-image: url('./images/Mask\ Group\ 1@2x.png');
     background-position: center;
@@ -53,7 +53,14 @@
 }
 
 .section-hero-content{
+    position: relative;
+    bottom: -65px;
+}
+
+.section-hero-content div{
+    color: #D3E7E7;
     background: #213A38E0;
+    padding: 70px;
 }
 
 .section-review{
@@ -78,7 +85,7 @@
 }
 
 .section-card{
-    padding-top: 145px;
+    padding-top: 315px;
     padding-bottom:160px;
     background-color: #112A2D;
 }
@@ -173,4 +180,52 @@
 
 .section-contact-overlay .btn-submit{
     background-color: #D3E7E7;
+}
+/*End of home page*/
+
+/*Start of help page*/
+
+.help-section-hero{
+    height: 660px;
+    background-image: url(./images/help-hero.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.help-section-hero-overlay{
+    background-color: #213a389e;
+    width: 100%;
+    height: 100%;
+}
+
+.help-section-hero-overlay h1{
+    color: #D3E7E7;
+}
+
+/*End of help page*/
+
+/* Single blog page styles */
+.sblog-section-hero{
+    height: 660px;
+    background-image: url(./images/Mask\ Group\ 25@2x.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+
+.sblog-section-subscribe .subscribe-form{
+    padding: 50px;
+    background-color: #112A2D;
+}
+
+.sblog-section-subscribe .form-control{
+    padding: 14px;
+}
+
+.sblog-section-subscribe .subscribe-form .btn{
+    font-size: 20px;
+    padding: 14px;
+    background: #D3E7E7;
 }
