fixed issues on the home page

--- a/assets/style.css
+++ b/assets/style.css
@@ -186,6 +186,7 @@ body{
     padding-right: 270px;
     margin-left: 40px;
     max-width: 61.5rem;
+    margin-right: 10%;
 }
 
 .section-opinion__review p{
