--- a/assets/style.css
+++ b/assets/style.css
@@ -286,6 +286,11 @@ body{
     margin-bottom: 156px;
 }
 
+.gallery-section-gallery h1{
+    font-size: 32px;
+    margin-bottom: 66px;
+}
+
 .gallery-section-gallery .card{
     height: 404px;
 }
@@ -331,3 +336,87 @@ body{
     padding: 14px;
     background: #D3E7E7;
 }
+
+/* Single blog 2 start */
+.sblog2-section-main{
+    margin-top: 173px;
+    /* margin-bottom: 156px; */
+    margin-left: 183px;
+}
+
+.sblog2-section-main .inner-container{
+    gap: 38px;
+}
+
+.img-container{
+    width: 923px;
+}
+
+.secondary-img-container{
+    width: 923px;
+    gap: 3.5%;
+    margin-bottom: 38px;
+    height: 231px;
+}
+
+.img-container .lightbox-container{
+    padding: 32px 0;
+    background-color: #E4F0F0;
+}
+
+.secondary-img{
+    height: 100%;
+    width: 31%;
+
+}
+
+.img-container .main-img{
+    width: 100%;
+    height: 418px;
+    margin-bottom: 38px;
+}
+
+.img-container .carousel-container{
+    width: 100%;
+    padding: 40px 68px 32px 68px;
+}
+
+.img-container .card-container{
+    width: 160px;
+    height: 185px;
+}
+
+.sblog2-section-main .text-container{
+    padding: 86px 76px 0px 136px;
+    background-color: #E4F0F0;
+}
+
+.sblog2-section-main .text-container h1{
+    color: #424143;
+    font-size: 32px;
+    font-size: 40px;
+}
+
+
+.sblog2-section-main .date{
+    color: #1C3230ED;
+    margin-bottom: 27px;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.sblog2-section-main .text-container p{
+    margin-bottom: 27px;
+    color: #424143;
+    font-size: 16px;
+    line-height: 26px;
+}
+
+.sblog2-section-main .text-container .blue-text{
+    font-size: 24px;
+    line-height: 32px;
+    margin-bottom: 32px;
+    color:#51908B;
+}
+
+/* Single blog 2 end */
