--- a/assets/style.css
+++ b/assets/style.css
@@ -443,10 +443,13 @@ input.form-control {
 /*End of gallery page*/
 
 /* Single blog page styles */
-#sblog-section-hero {
+#sblog-section-hero,
+#sblog2-section-hero {
   background-image: url(./images/blog-hero.png);
 }
-#sblog-section-hero .help-section-hero-overlay {
+
+#sblog-section-hero .help-section-hero-overlay,
+#sblog2-section-hero .help-section-hero-overlay {
   background-color: rgb(17 42 45 / 35%);
 }
 
@@ -554,7 +557,42 @@ input.form-control {
 }
 
 .img-container {
-  width: 923px;
+  max-width: 58rem;
+}
+
+.carousel-container {
+  background-color: var(--light-green);
+  height: 16rem;
+  display: flex;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+.carousel-container .card {
+  max-width: 10rem;
+  width: 100%;
+}
+
+.carousel-container .card-img {
+  max-width: 10rem;
+  width: 16rem;
+}
+
+.caption p, .caption h6 {
+  font-size: 18px;
+  text-align: center;
+}
+
+#s2blog-lightbox {
+  max-width: 58rem;
+}
+
+#s2blog-lightbox .box {
+  gap: 2rem ;
+}
+
+#s2blog-lightbox .sblog-lightbox-main-img {
+  margin-top: 2rem
 }
 
 .secondary-img-container {
@@ -566,7 +604,7 @@ input.form-control {
 
 .img-container .lightbox-container {
   padding: 32px 0;
-  background-color: #e4f0f0;
+  background-color: var(--super-light-green);
 }
 
 .secondary-img {
@@ -592,7 +630,7 @@ input.form-control {
 
 .sblog2-section-main .text-container {
   padding: 86px 76px 0px 136px;
-  background-color: #e4f0f0;
+  background-color: var(--super-light-green);
 }
 
 .sblog2-section-main .text-container h1 {
@@ -603,23 +641,10 @@ input.form-control {
 
 .sblog2-section-main .date {
   color: #1c3230ed;
-  margin-bottom: 27px;
-  font-size: 14px;
-  line-height: 20px;
-}
-
-.sblog2-section-main .text-container p {
-  margin-bottom: 27px;
-  color: #424143;
-  font-size: 16px;
-  line-height: 26px;
 }
 
 .sblog2-section-main .text-container .blue-text {
-  font-size: 24px;
-  line-height: 32px;
   margin-bottom: 32px;
-  color: #51908b;
 }
 
 /* Single blog 2 end */
